<resources>
    <string name="app_name">Tp_Final_Inmobiliaria</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="inmobiliaria1">Inmobiliaria</string>
    <string name="inmobiliaria">Inmobiliaria</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="iniciar_session">Iniciar_session</string>
    <string name="icono">icono</string>
    <string name="textview2">text2</string>
    <string name="textview1">text1</string>
    <string name="todo">text3</string>
    <string name="textInquilino">TextView</string>
    <string name="textContrato">TextView</string>
    <string name="textview3">textDescripcion</string>
    <string name="grande">fotoGrande</string>
    <string name="disponible">Disponible</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_pagos">Pagos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_perfil">Mis datos</string>
    <string name="menu_salir">Cerrar sesion</string>
    <string name="perfil">Perfil</string>
    <string name="Direccion">TextView</string>
    <string name="precio">TextView</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">iniciar session</string>
    <string name="correo">Correo</string>
    <string name="iniciarsesion">Iniciar sesion</string>
    <string name="dni">DNI</string>
    <string name="textview5">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview0">TextView</string>
    <string name="direccion">Direccion</string>
    <string name="textview6">TextView</string>
    <string name="textview4">TextView</string>
    <string name="telefono">Telefono</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="numero_de_pago">Numero de Pago</string>
    <string name="textview8">TextView</string>
    <string name="textview9">TextView</string>
    <string name="importe">Importe</string>
    <string name="textview10">TextView</string>
    <string name="textview11">TextView</string>
    <string name="fechafecha">Fecha</string>
    <string name="textview12">TextView</string>
    <string name="inicio">inicio</string>
    <string name="textview13">textview13</string>
    <string name="finalizacion">finalizacion</string>
    <string name="textview14">textview14</string>
    <string name="precioC">precio</string>
    <string name="textview15">textview15</string>
    <string name="dniP">DNI</string>
    <string name="direccion2">Direccion</string>
    <string name="tipo2">Tipo</string>
    <string name="precio2">Precio</string>
    <string name="email3">Email:</string>
    <string name="admin_admin_com">admin@admin.com</string>
    <string name="editar">Editar</string>
</resources>
