<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textDniP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/dniP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDniP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDniP"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textApellidoP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Apellido:"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDniP" />


    <EditText
        android:id="@+id/editApellidoP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textApellidoP" />


    <TextView
        android:id="@+id/textNombreP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="Nombre:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editApellidoP" />

    <EditText
        android:id="@+id/editNombreP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="admin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombreP" />

    <TextView
        android:id="@+id/textTelefonoP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Telefono:"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNombreP" />

    <EditText
        android:id="@+id/editTelefonoP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelefonoP" />

    <TextView
        android:id="@+id/textEmailP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email3"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefonoP" />

    <EditText
        android:id="@+id/editEmailP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_admin_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailP"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailP" />
</androidx.constraintlayout.widget.ConstraintLayout>
